Fixes imports and some code style issues.